--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.25",
+    "next": "^16.1.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "zustand": "5.0.3"
@@ -19,8 +19,8 @@
     "@types/react": "18.3.20",
     "@types/react-dom": "18.3.5",
     "autoprefixer": "10.4.21",
-    "eslint": "8.57.1",
-    "eslint-config-next": "14.2.25",
+    "eslint": "^10.0.0",
+    "eslint-config-next": "^0.2.4",
     "postcss": "8.5.3",
     "tailwindcss": "3.4.17",
     "typescript": "5.8.2"
