--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@tma.js/sdk": "^3.1.7",
     "@ton/crypto": "^3.3.0",
     "@ton/ton": "^16.2.2",
     "@tonconnect/ui-react": "^2.4.1",
